# mathwizard

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/commands/: blueprint.md  design.md  generate-agents.md  implement.md  plan.md  pr-review.md  prd.md  ticket.md
.claude/skills/: SKILLS.md
.claude/skills/authoring-exercise-blueprint/: SKILL.md
.claude/skills/authoring-exercises/: SKILL.md
.claude/skills/clementing/: REVIEWER-PROMPT.md  SKILL.md
.claude/skills/creating-designs/: DESIGN-TEMPLATE.md  SKILL.md
.claude/skills/creating-plans/: PLAN-TEMPLATE.md  SKILL.md  TASK-TEMPLATE.md
.claude/skills/creating-tickets/: SKILL.md
.claude/skills/fastapi/: SKILL.md
.claude/skills/generate-pr-note/: SKILL.md
docs/: TESTING.md  docker.md  improvements.md
docs/tutorials/: 01-building-exercise-card.md
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
scripts/: deploy.sh  dev_deploy.sh  dev_up.sh  refresh.sh
src/exercise_finder/: config.py  constants.py  enums.py  paths.py
src/mathwizard/: cli.py  enums.py  exceptions.py  settings.py
tests/: __init__.py  test_bootstrap_auth.py  test_bootstrap_questions.py  test_bootstrap_roster.py  test_config.py  test_db_auth.py  test_db_questions.py  test_db_roster.py  test_paths.py  test_pydantic_models.py  test_settings.py
tests/test_app/: test_auth_routes.py  test_practice_routes.py  test_roster_routes.py
tests/test_services/: test_question.py  test_user.py
tests/test_web/: test_routes.py
(+195 files in other folders)
