[project]
name = "mathwizard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Niels Ota", email = "ota.niels@bcg.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "openai>=2.14.0",
    "openai-agents>=0.6.4",
    "typer>=0.15.1",
    "fastapi>=0.115.6",
    "uvicorn>=0.32.1",
    "jinja2>=3.1.4",
    "starlette>=0.50.0",
    "itsdangerous>=2.2.0",
    "boto3>=1.35.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.0",
    "authlib>=1.3.0",
    "requests>=2.31.0",
    "pydantic-settings>=2.0.0",
    "sqlmodel>=0.0.39",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
